[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e2e_st"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.50.0",
    "sacrebleu==2.5.1",
    "pyyaml==6.0.2",
    "wandb==0.19.9",
    "tqdm==4.67.1"
]

[tool.setuptools.packages.find]
include = ["e2e_st"]